hacks/scripts/ror-cluster-initializer/kind-services.yaml
kind: Service
apiVersion: v1
metadata:
  name: backend-ide
spec:
  type: ExternalName
  externalName: host.docker.internal
